<resources>
    <string name="app_name">PagoDividido</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="amount_spent_placeholder">Amount Spent: %.2f</string>
    <string name="companion_name">Companion name</string>
    <string name="add_companion">Add Companion</string>
    <string name="trip_name">Name of the trip</string>
    <string name="create">Create</string>
    <string name="details">Details</string>
    <string name="general">General</string>
    <string name="who_paid">Who paid</string>
    <string name="who_paid_placeholder">Who paid: %s</string>
    <string name="debtors">Debtors:</string>
    <string name="detail_placeholder">Detail: %s</string>
    <string name="detail">Detail</string>
    <string name="amount">Amount</string>
    <string name="quien_debe">Who benefitted?</string>
    <string name="result">Result</string>
    <string name="error_empty_amount">This field requires an amount.</string>
    <string name="error_non_numeral_amount">This field requires a number.</string>
    <string name="hint_amount_owed">Amount owed</string>
    <string name="error_debtor_amount_0">A number bigger that zero is required.</string>
    <string name="error_debtor_amount_over_max">This amount can\'t be bigger than the total amount spent</string>
    <string name="error_debtor_total_amount_maxed">Total debt can\'t be over the total amount spent.</string>
    <string name="dialog_title_amount_not_reached">You didn\'t match the total amount spent.</string>
    <string name="dialog_message_amount_not_reached">The total sum of the payments didn\'t reach the total amount spent. %.2f is missing.</string>
    <string name="ok">OK</string>
    <string name="input_error_companion_name">You need to input the name of a companion.</string>
    <string name="input_error_no_companions">Tienes que agregar al menos dos compañeros al viaje</string>
    <string name="subtitle_total_expense">Gasto total: %.2f</string>
    <string name="subtitle_they_owe">Le deben:</string>
    <string name="companion_benefited_placeholder">%s used %.2f</string>
    <string name="content_description_click_to_expand">Click to expand</string>
    <string name="default_error">Error</string>
    <string name="title_trips">Viajes</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="title_new_trip">New Trip</string>
    <string name="delete_companion">Delete companion</string>
    <string name="back">Back</string>
    <string name="total_spent">Total spent: %.2f</string>
    <string name="owes_you">%s owes you</string>
    <string name="you_owe">You owe %s</string>
    <string name="select_companion">Select Companion</string>
    <string name="all_set">%s and you are all set</string>
    <string name="no_detail">No detail</string>
    <string name="new_expense">New expense</string>
    <string name="payment_info">Payment information</string>
    <string name="payment_way">Payment way</string>
    <string name="equals">Equals</string>
    <string name="detailed_amounts">Detailed Amounts</string>
    <string name="amount_placeholder">%.2f</string>
    <string name="payer_placeholder">Payer: %s</string>
</resources>
